--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "server": "tsx server/index.ts"
+       "dev": "next dev",
+       "build": "next build",
+       "start": "next start",
+       "lint": "eslint"
   },
   "dependencies": {
-    "@gamerstake/game-platform-sdk": "^1.0.5",
     "framer-motion": "^12.23.26",
     "next": "16.1.0",
     "react": "19.2.3",
